# GoodreadsScraper

./: .gitignore  TODO.md  hatchet.mhtml  merge_authors.py  pyproject.toml  requirements.txt  search_crawl.py
GoodreadsScraper/: items.py  middlewares.py  pipelines.py
GoodreadsScraper/spiders/: book_spider.py  list_spider.py  search_spider.py
checkpoints/: checkpoint_0.txt  checkpoint_1.txt  checkpoint_2.txt  checkpoint_3.txt  checkpoint_4.txt  checkpoint_5.txt  checkpoint_6.txt  checkpoint_7.txt  checkpoint_8.txt  checkpoint_9.txt
