[project]
name = "GoodreadsScraper"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.14"
dependencies = [
    "click",
    "pyarrow",
    "python-dateutil",
    "scrapy",
    "yapf",
    "rich",
]

[tool.setuptools.packages.find]
include = ["GoodreadsScraper*"]
exclude = ["logs*", "checkpoints*"]

[tool.uv]
dev-dependencies = [
    "black>=22.0.0",
    "pytest>=7.0.0",
]
